# curseforge-rs

./: Cargo.toml  cl.json  out.json  output.json
src/: client.rs  lib.rs  main.rs  schema.rs
src/v1/: categories.rs  files.rs  fingerprints.rs  games.rs  minecraft.rs  mod.rs  mods.rs
src/v2/: games.rs  mod.rs
